@@ -327,6 +327,10 @@ class H5MDReader(base.ReaderBase):
 
 
     .. versionadded:: 2.0.0
+    .. versionchanged:: 2.1.0
+       Adds :meth:`parse_n_atoms` method to obtain the number of atoms directly
+       from the trajectory by evaluating the shape of the ``position``,
+       ``velocity``, or ``force`` groups.
 
     """
 
@@ -564,6 +568,19 @@ class H5MDReader(base.ReaderBase):
         # nb, filename strings can still get passed through if
         # format='H5MD' is used
         return HAS_H5PY and isinstance(thing, h5py.File)
+
+    @staticmethod
+    def parse_n_atoms(filename):
+        with h5py.File(filename, 'r') as f:
+            for group in f['particles/trajectory']:
+                if group in ('position', 'velocity', 'force'):
+                    n_atoms = f[f'particles/trajectory/{group}/value'].shape[1]
+                    return n_atoms
+
+            raise NoDataError("Could not construct minimal topology from the "
+                              "H5MD trajectory file, as it did not contain a "
+                              "'position', 'velocity', or 'force' group. "
+                              "You must include a topology file.")
 
     def open_trajectory(self):
         """opens the trajectory file using h5py library"""
